--- a/index.Rmd
+++ b/index.Rmd
@@ -192,7 +192,7 @@ En 7 meses se observan unos valores atipicos que superan los 1000 homicidios y u
 
 ### - *Identificacion de estacionalidades en  los resagos
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 #Gráfica de rezagos
 lag.plot(df_ts, 12, do.lines = F,main = "Grafica de Rezagos")
 
@@ -208,7 +208,7 @@ Para el caso de la grafica de rezagos se puede afirmar que existe estacionalidad
 
 A continuacion se realiza el calculo de las medias moviles **(SMA y EMA)** de la serie de tiempo con el objetivo de obtener de forma mas clara el comportamiento de nuestra serie e identificar cual de estas se ajusta en mejor proporcion a nuestra serie. 
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 media_sim <- SMA(df_ts, n = 12)
 media_exp <- EMA(df_ts, n = 12) # el parámetro n significa que se utilizará los ultimos 12 datos
 Data_ts <- data.frame(fechas = seq(as.Date("2010-01-01"), by = "month",length.out = nrow(df)),
@@ -217,7 +217,7 @@ Data_ts <- data.frame(fechas = seq(as.Date("2010-01-01"), by = "month",length.ou
 
 
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 ggplot(Data_ts, aes(x = fechas, y = homicidios))+
   geom_line(aes(y = media_sim,color = "SMA"))+
   geom_line(aes(y = media_exp,color = "EMA"))+
@@ -244,7 +244,7 @@ Se observa una tendencia a la baja al finalizar el primer semestre de cada año,
 En cuanto a las líneas móviles exponenciales versus las simples, aunque no coinciden exactamente en su posición, sí lo hacen en cuanto a su tendencia, siendo la línea simple más suavizada que la exponencial.
 
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 ggplot(Data_ts, aes(x = fechas, y = homicidios))+
   geom_line(color = "grey")+
   geom_line(aes(y = media_exp, color = "EMA"), linewidth = 0.5)+
@@ -267,7 +267,7 @@ En congruencia con las medias móviles, se observa que la cantidad de homicidios
 
 A continuacion realizaremos algunas exploraciones que nos permitiran detallar mucho mejor el analisis de nuestra serie de tiempo, mediante estas herramientas podremos identificar los componentes basicos de una serie temporal y determinar las transformaciones necesarias para mejorar ciertos comportamientos para el analisis.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 fit_df <- decompose(Data_ts$homicidios, type='additive') # el componente 'additive' relaciona tendencia, estacionalidad y residuo
 
 autoplot(fit_df, color = "aquamarine3") +
@@ -309,7 +309,7 @@ Dado que el **p-value** obtenido fue `r Estacio_Test$p.value`, valor que es infe
 
 La estacionalidad en una serie de tiempo nos permite identificar patrones que nos permiten identificar patrones que se repiten con una frecuencia especifica, esta informacion es clave para tomar acciones sobre comportamientos que pueden estar asociados a comportamientos de la poblacion influenciado por factores externos **(vacaciones, temporada de lluvia, navidad, etc.)**.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 ggseasonplot(Data_ts$homicidios)+
   theme_minimal()+
   labs(x = "Mes", title = "Estacionalidad de los homicidios por mes")
@@ -349,7 +349,7 @@ Despues de realizar el procedimiento de diferenciacion se llega a la conclusion 
 
 La transformacion logaritmica permite eliminar la tendencia de serie de tiempo, esto con el objetivo de estabilizar el comportamiento de la serie y que esta no se vea afectada por este componente durante el modelamiento y la prediccion, cabe resaltar que estas transformaciones, en muchos casos deben ser revertidas, como por ejemplo al realizar validaciones cruzadas entre modelos para poder tener valores en la misma escala. 
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 x=Data_ts
 plot(x$homicidios, xlab= "Anios", ylab= "Homicidios", main= "Serie Original")
 
@@ -373,7 +373,7 @@ teniendo en cuenta que la serie no es estacionaria se debe continuar con la plic
 
 Luego de haber aplicado la transformacion logaritmica procederemos con la implementacion de la diferenciacion, para realizar este procedimiento nos apoyaremos en la funcion **diff**.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 a_estacio = diff(x$homicidios)
 plot(a_estacio, xlab = "Anios", ylab = " ",
      main = "TS estacionariedad en los homicidios de Colombia \n2010 - 2024")
@@ -390,7 +390,7 @@ Tal y como se observa en la grafica, la diferenciacion nos ha permitido tener un
 
 Como parte de la exploracion de la serie transformada se realiza la verificacion de las correlaciones luego de las transformaciones para comprobar la estacionaridad de la serie transformada
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 library(forecast)
 acf(a_estacio, main = "Autocorrelacion")
 ```
@@ -404,7 +404,7 @@ El realizar la autocorrelacion nos permite identificar un comportamiento estacio
 
 al igual que el analisis de autocorrelacion **ACF** el analisis de autocorrelacion parcial **PACF** nos permite evaluar la autoregresividad de la serie de tiempo.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 pacf(a_estacio, main = "Autocorrelacion parcial")
 ```
 ![](unnamed-chunk-23-1.png)
@@ -442,7 +442,7 @@ La primera decisión radica en elegir el tipo de patrón de estacionalidad, es d
 
 ### - Holt-Winters Multiplicativo
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 Modelo <- HoltWinters(Data_ts$homicidios, seasonal = "multiplicative")
 
 plot(Modelo, main = "Predicciones con modelo Holt-Winters", ylab = "Cantidad de Homicidios", xlab = "Tiempo (Anios)")
@@ -455,7 +455,7 @@ legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"),
 
 La gráfica nos brinda una visualización del comportamiento de las predicciones generadas por el modelo multiplicativo Holt-Winters. En un primer vistazo, podemos observar un ajuste cercano entre las predicciones y los datos base. Además, se aprecia una tendencia y estacionalidad similar entre ambas.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 # Se recuperan los valores alpha, beta, y gamma usados en el modelo
 alpha <- Modelo$alpha
 beta <- Modelo$beta
@@ -477,7 +477,7 @@ Para un mejor ajuste, se probará modificar los parametros **Beta**, **Gamma** y
       
 **Gamma** es un número entre 0 y 1 que determina cuanto peso se le da a las observaciones más recientes en cuanto su nivel (promedio móvil).
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 Modelo2 <- HoltWinters(Data_ts$homicidios, seasonal = "multiplicative", alpha = 0.7,
                        beta = 0, gamma = 0.9)
 plot(Modelo2, main = "Predicciones con modelo Holt-Winters (Uso de parametros: Nivel)")
@@ -489,7 +489,7 @@ legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"),
 
 Al modificar dando más peso al parámetro **Gamma** correspondiente al Nivel, se puede apreciar como las estimaciones cambian en magnitud y los picos y valles no coinciden en igual proporción como en el modelo original.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 Modelo3 <- HoltWinters(Data_ts$homicidios, seasonal = "multiplicative", alpha = 0.7,
                        beta = 0.9, gamma = 0.1)
 plot(Modelo3, main = "Predicciones con modelo Holt-Winters \n (Uso de parametros: Estacionalidad)")
@@ -502,7 +502,7 @@ legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty
 
 Al modificar dando más peso al parámetro **Beta** correspondiente a la Estacionalidad, se puede apreciar como las estimaciones del 2024 es muy diferente a los modelos anteriores, lo cual se explica al considerar lo ocurrido en el año 2023 como consecuencia de factores externos que sólo afectan en ese periodo de tiempo.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 Modelo4 <- HoltWinters(Data_ts$homicidios, seasonal = "multiplicative", alpha = 0.7,
                        beta = 0.1, gamma = 0.1)
 plot(Modelo4, main = "Predicciones con modelo Holt-Winters (Uso de parametros: Estacionalidad)")
@@ -513,7 +513,7 @@ legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty
 
 
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 plot(fitted(Modelo), main = "Holt-winters Ajuste", xlab = "", ylab = "")
 
 plot(fitted(Modelo4), main = "Holt-winters Ajuste", xlab = "", ylab = "")
@@ -527,7 +527,7 @@ El ajuste del modelo muestra una tendencia constante, un nivel que se aproxima a
 
 ### - Prediccion Holt-Winters
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 prediction <- predict(Modelo, 11, prediction.interval = TRUE, level = 0.95)
 plot(forecast(Modelo, h = 11, level = c(80,95)), main = "Predicciones en Colombia bajo el modelo Holt-Winters")
 
@@ -540,7 +540,7 @@ En los valores predichos bajo el modelo **Holt-winters**, se implementó la pred
 
 ### - Forcast evaluation
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 Modelo_evaluation <- forecast(Modelo, h = 11, level=c(80,95))
 
 acf(Modelo_evaluation$residuals, lag.max=30, na.action=na.pass)
@@ -563,7 +563,7 @@ Box.test(Modelo_evaluation$residuals, lag=30, type="Ljung-Box")
 
 Dado que **p-value** es mayor a **0.05** se acepta la hipotesis nula advertida en el parrafo anterior, lo que significa que en primera instacia hay una buena especificación del modelo, las predicciones son confiables y los residuos son aleatorios, lo que permite al modelo capturar adecuadamente la estructura de dependencia temporal de los datos.
 
-```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center', fig.show='hide'}
 hist(Modelo_evaluation$residuals, main = "Residuos del modelo Holt-Winters")
 
 ```
@@ -603,7 +603,7 @@ La salida **numeric(0)** indica que la media de la serie temporal a_estacio es c
 
 ### - Prediccion Auto-Arima
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 # Realizar predicciones a 11 pasos hacia adelante
 predicciones <- forecast(m_arima, h = 11)
 
@@ -614,7 +614,7 @@ plot(predicciones, main = "Predicciones con el modelo ARIMA")
 
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 residuales<-m_arima$residuals
 qqnorm(residuales)
 qqline(residuales)
@@ -681,7 +681,7 @@ forecast_prophet <- predict(modelo_prophet, futuro_prophet)
 
 ### - Visualizacion del Modelo
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 # Visualizar los resultados
 plot(modelo_prophet, forecast_prophet)
 ```
@@ -699,7 +699,7 @@ A continuacion se presentan los componentes de modelo **prophet** en los que se 
 
 Para el caso de la tendencia, es claro que la prediccion presenta un comportamiento ascendente para el año **2024**.
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 prophet_plot_components(modelo_prophet, forecast_prophet)
 
 
@@ -735,7 +735,7 @@ nueva_ts <- window(df_ts, end = c(anio_final, mes_final))
 
 Se realiza un nuevo modelo Holt-Winter para realizar el proceso de validacion de los modelos untilizando la serie de tiempo de entrenamiento con **-6 meses**.
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 # Creación de Modelo Holt-Winters con nueva serie de tiempo
 nuevoMod_holt_winters <- HoltWinters(nueva_ts, seasonal = "additive")
 
@@ -1042,7 +1042,7 @@ Se entrena el modelo con las siguientes caracteristicas:
 
 Se usa  función plotIterativeError para ver evolución del error de la red a lo largo de las iteraciones de entrenamiento
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show='hide'}
 plotIterativeError(model)
 
 ```
@@ -1095,7 +1095,7 @@ modelJordan <- jordan(train_inputs, train_outputs, size = 12, learnFuncParams = 
 
 ### - Evolucion de Errores Jordan
 
-```{r}
+```{r, fig.show='hide'}
 plotIterativeError(modelJordan)
 
 ```
